Expand unread count feature
